[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbkn-tuner"
version = "1.0.0"
description = "AI-Powered RDBMS Advisory Application using local LLM models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "DBKN Tuner Team"}
]

dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
dbkn-tuner = "dbkn_tuner.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
